fix case item labels flex wrap on mobile

--- a/src/scss/parts/cards.scss
+++ b/src/scss/parts/cards.scss
@@ -28,6 +28,7 @@
     &__labels {
         margin-top: -10px;
         display: flex;
+        flex-wrap: wrap;
         gap: 5px;
 
         @media (max-width:1024px) {
